--- a/src/TimeLine/timeline.css
+++ b/src/TimeLine/timeline.css
@@ -15,4 +15,27 @@
 	width: 100vw;
 	height: 100vh;
   }
-  
+  .card1 {
+	width: 190px;
+	height: fit-content;
+	background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+	border-radius: 20px;
+	transition: all .3s;
+   }
+   
+   .card2 {
+	width: 190px;
+	height: fit-content;
+	background-color: #1a1a1a;
+	border-radius: 20px;
+	transition: all .2s;
+   }
+   
+   .card2:hover {
+	transform: scale(0.98);
+	border-radius: 20px;
+   }
+   
+   .card1:hover {
+	box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+   }
