--- a/src/TimeLine/timeline.css
+++ b/src/TimeLine/timeline.css
@@ -16,17 +16,16 @@
 	height: 100vh;
   }
   .card1 {
-	width: 190px;
-	height: fit-content;
-	background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+
+
+	/* background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%); */
 	border-radius: 20px;
 	transition: all .3s;
    }
    
    .card2 {
-	width: 190px;
-	height: fit-content;
-	background-color: #1a1a1a;
+	
+	/* background-color: #1a1a1a; */
 	border-radius: 20px;
 	transition: all .2s;
    }
