--- a/src/components/AboutDetails.css
+++ b/src/components/AboutDetails.css
@@ -1,7 +1,5 @@
 .About-card {
   width: 100%;
-
- 
   position: relative;
   display: flex;
   place-content: center;
@@ -12,8 +10,8 @@
 .About-card p {
   z-index: 1;
   color: white;
-  font-size: 1.2rem;
-  padding: 1rem;
+  font-size: 1.6rem;
+  padding: 3rem;
   font-family: "Poppins", sans-serif;
   text-align: justify;
 
@@ -21,7 +19,7 @@
 .About-card::before {
   content: "";
   position: absolute;
-  width: 500px;
+  width: 100%;
   background-image: linear-gradient(
     180deg,
     rgb(0, 183, 255),
@@ -44,7 +42,6 @@
   content: "";
   position: absolute;
   background: #07182e;
-
   inset: 5px;
   border-radius: 15px;
 }
