--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,24 @@
-
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+#cursor {
+  position: fixed;
+  width: 10px;
+  height: 10px;
+  background-color: #0c49e6;
+  border-radius: 100%;
+  pointer-events: none;
+  z-index: 1000;
+  transition: transform ease-out 10ms;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+#stalker {
+  position: fixed;
+  margin-top: -15px;
+  margin-left: -15px;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 174, 255, 0.423);
+  opacity: 30%;
+  border-radius: 100%;
+  pointer-events: none;
+  transition: transform ease-out 100ms;
+  z-index: 999;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
-
-
