--- a/src/components/AboutDetails.css
+++ b/src/components/AboutDetails.css
@@ -1,4 +1,4 @@
-.About-card {
+/* .About-card {
   width: 100%;
   position: relative;
   display: flex;
@@ -55,8 +55,7 @@
 
 } */
 
-.mob-video {
-    width: 70%;
+ .mob-video { 
     height: 600px;
     background: black;
     border-radius: 35px;
@@ -64,6 +63,7 @@
     padding: 7px;
     position: relative;
     box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.486);
+    margin: 0 auto;
     
   }
 
@@ -78,11 +78,10 @@
   .CSI_Video{
     width:100%;
     height:100%;
-    
-    /* background-position: center; */
+    background-position: center;
     border-radius: 2rem;
-    /* border: 1px solid white; */
-}
+    border: 1px solid white;
+} 
   
   
   
@@ -161,9 +160,9 @@
     line-height: 35px;
     height: 100%;
     transition: 0.5s ease-in-out;
-  }
+  } 
   
-  /* .hidden {
+  .hidden {
     display: block;
     opacity: 0;
     transition: all 0.3s ease-in;
@@ -175,7 +174,7 @@
   
   .card:hover .hello {
     transform: translateY(-20px);
-  } */
+  }
   
   
   
