--- a/src/components/Domain.css
+++ b/src/components/Domain.css
@@ -1,16 +1,13 @@
-
 /* @import url('https://fonts.googleapis.com/css2?family=Anton&family=Trispace:wght@100..800&display=swap') */
 
-.container
-{
+.container {
   max-width: 1000px;
   margin: 100px auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.card
-{
+.card {
   position: relative;
   margin: 20px 0;
   width: 300px;
@@ -18,18 +15,18 @@
   background: #fff;
   transform-style: preserve-3d;
   transform: perspective(2000px);
-  box-shadow: inset 300px 0 50px rgba(0,0,0,.5), 0 20px 20px rgba(0,0,0,.5);
+  box-shadow: inset 300px 0 50px rgba(0, 0, 0, 0.5),
+    0 20px 20px rgba(0, 0, 0, 0.5);
   transition: 1s;
 }
-.card:hover
-{
+.card:hover {
   z-index: 10000;
   transform: perspective(2000px) rotate(-10deg);
-  box-shadow: inset 20px 0 50px rgba(0,0,0,.5), 0 10px 100px rgba(0,0,0,.5);
+  box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5),
+    0 10px 100px rgba(0, 0, 0, 0.5);
 }
 
-.card .Box
-{
+.card .Box {
   position: relative;
   width: 100%;
   height: 100%;
@@ -38,10 +35,10 @@
   position: relative;
   transform-origin: left;
   z-index: 1;
-  transition: 1s cubic-bezier(.15,1.7,.84,.58);
+  transition: 1s cubic-bezier(0.15, 1.7, 0.84, 0.58);
   background: #111;
 }
-.card .Box img
+/* .card .Box img
 {
   position: absolute;
   top: 0;
@@ -49,13 +46,19 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+} */
+.card .Box h2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.card:hover .Box
-{
+.card:hover .Box {
   transform: rotateY(-135deg);
 }
-.card .details
-{
+.card .details {
   position: absolute;
   top: 0;
   left: 0;
@@ -63,7 +66,7 @@
   padding: 20px;
   z-index: -1;
   font-family: "Anton", sans-serif;
-  font-weight:bold;
+  font-weight: bold;
   font-style: normal;
   font-size: 2rem;
   margin-top: 5rem;
