--- a/src/Winner/winner.css
+++ b/src/Winner/winner.css
@@ -326,3 +326,42 @@
     rgba(255, 255, 255, 0) 100%
   );
 }
+
+
+
+/* -------------------  */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
+
+
+.text{
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-size: 50px;
+    -webkit-text-stroke: 1px #eee;
+    color: transparent;
+    letter-spacing: 5px;
+    position: relative;
+}
+
+.text::before {
+    content: attr(data-text);
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: #ff7a00;
+    -webkit-text-stroke: 3px #ff7a00;
+    width: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid #ff7a00;
+    animation: text-fill 2s ease-in-out alternate infinite;
+}
+
+
+@keyframes text-fill {
+    100% {
+        width: 100%;
+    }
+}
