--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -307,12 +307,28 @@
     left: 0;
     top: 0;
     color: #0976BC;
-    -webkit-text-stroke: 3px white;
+    -webkit-text-stroke: 2px white;
     width: 0;
     white-space: nowrap;
     overflow: hidden;
     border-right: 3px solid #0000FF;
     animation: text-fill 2s ease-in-out alternate infinite;
+}
+
+@media (max-width : 600px){
+  .hometext::before {
+    content: attr(data-text);
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: #0976BC;
+    -webkit-text-stroke: 1px white;
+    width: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid #0000FF;
+    animation: text-fill 2s ease-in-out alternate infinite;
+}
 }
 
 
