--- a/src/components/Domain.css
+++ b/src/components/Domain.css
@@ -1,30 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Trispace:wght@100..800&display=swap');
 
- .container {
-  max-width: 1000px;
-  margin: 100px auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
+
 .card {
   position: relative;
   margin: 20px 0;
-  width: 300px;
-  height: 400px;
   background: #fff;
   transform-style: preserve-3d;
   transform: perspective(2000px);
   box-shadow: inset 300px 0 50px rgba(0, 0, 0, 0.5),
     0 20px 20px rgba(0, 0, 0, 0.5);
-  transition: 1s;
+  transition: 2s;
 }
-.card:hover {
+/* .card:hover {
   z-index: 10000;
   transform: perspective(2000px) rotate(-10deg);
   box-shadow: inset 20px 0 50px rgba(0, 0, 0, 0.5),
     0 10px 100px rgba(0, 0, 0, 0.5);
-}
+} */
 
 .card .Box {
   position: relative;
@@ -35,8 +27,10 @@
   position: relative;
   transform-origin: left;
   z-index: 1;
-  transition: 1s cubic-bezier(0.15, 1.7, 0.84, 0.58);
+  transition: 3s cubic-bezier(0.15, 1.7, 0.84, 0.58);
   background: #111;
+  background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgba(0,8,120,1) 0%, rgba(95,184,224,1) 99.7% );
+  
 } 
 .card .Box img
 {
@@ -48,27 +42,11 @@
   object-fit: cover;
 } 
  .card .Box h2 {
-  position: absolute;
-  top: 0;
-  left: 0;
+  
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 .card:hover .Box {
   transform: rotateY(-135deg);
-}
-.card .details {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-sizing: border-box;
-  padding: 20px;
-  z-index: -1;
-  font-family: "Anton", sans-serif;
-  font-weight: bold;
-  font-style: normal;
-  font-size: 2rem;
-  margin-top: 5rem;
-  margin-left: 1rem;
 }
