--- a/src/components/Domain.css
+++ b/src/components/Domain.css
@@ -22,14 +22,13 @@
   position: relative;
   width: 100%;
   height: 100%;
-  border: 1px solid #000;
   box-sizing: border-box;
+  background-color: black;
   position: relative;
   transform-origin: left;
   z-index: 1;
   transition: 3s cubic-bezier(0.15, 1.7, 0.84, 0.58);
-  background: #111;
-  background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgba(0,8,120,1) 0%, rgba(95,184,224,1) 99.7% );
+background-color: rgba(0, 102, 255, 0.367);
   
 } 
 .card .Box img
@@ -50,3 +49,15 @@
 .card:hover .Box {
   transform: rotateY(-135deg);
 }
+
+#domainpara{
+  display: none;
+  transition: all 1.5s ease-in-out;
+
+}
+
+.card:hover #domainpara{
+  display: block;
+
+}
+
