--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,32 @@
     bottom: -15rem!important;
 } */
 
-body{
-    background-color: black;
+body {
+  background-color: black;
 }
 
-.bottop:hover .bot{
-    bottom: 0 !important;
-    
+.bottop:hover .bot {
+  bottom: 0 !important;
+}
+
+.vertical-timeline-element-icon {
+  position: absolute;
+  top: 16px;
+  left: 14px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 0 4px rgba(0, 0, 0, 0.05);
+}
+
+@media only screen and (min-width: 1170px) {
+  .vertical-timeline--two-columns .vertical-timeline-element-icon {
+    width: 12px;
+    height: 12px;
+    left: 52.09%;
+    margin-left: -30px;
+  }
 }
