--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,25 @@ body {
     transform: rotate(0);
   }
 }
+
+
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: none;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #00cea8;
+  background: linear-gradient(90deg, #00cea8 0%, rgba(60, 51, 80, 0) 100%);
+  background: -webkit-linear-gradient(
+    90deg,
+    #00cea8 0%,
+    rgba(60, 51, 80, 0) 100%
+  );
+  border-radius: 7px;
+}
