--- a/src/Winner/winner.css
+++ b/src/Winner/winner.css
@@ -1,134 +1,9 @@
-
-
-/* ----------------------- ceb  */
-
-.light-button button.bt {
-  position: relative;
-  height: 200px;
-  display: flex;
-  align-items: flex-end;
-  outline: none;
-  background: none;
-  border: none;
-  cursor: pointer;
+.innertextprize{
+  flex: 4;
+  
 }
-
-.light-button button.bt .button-holder {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.imageprize{
+  flex: 1;
   justify-content: center;
-  height: 100px;
-  background-color: #0a0a0a;
-  border-radius: 5px;
-  color: #0f0f0f;
-  font-weight: 700;
-  transition: 300ms;
-  outline: #0f0f0f 2px solid;
-  outline-offset: 20;
-  border: 1px solid rgba(0, 0, 255, 0.405);
-}
-
-.light-button button.bt .button-holder svg {
-  height: 50px;
-  fill: #0f0f0f;
-  transition: 300ms;
-}
-
-.light-button button.bt .light-holder {
-  position: absolute;
-  height: 200px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-}
-
-.light-button button.bt .light-holder .dot {
-  position: absolute;
-  top: 0;
-  width: 10px;
-  height: 10px;
-  background-color: #0a0a0a;
-  border-radius: 10px;
-  z-index: 2;
-}
-
-.light-button button.bt .light-holder .light {
-  position: absolute;
-  top: 0;
-  width: 200px;
-  height: 200px;
-  clip-path: polygon(50% 0%, 25% 100%, 75% 100%);
-  background: transparent;
-}
-
-.light-button button.bt:hover .button-holder svg {
-  fill: rgba(88, 101, 242, 1);
-}
-
-@media (max-width: 3000px) {
-  .button-holder svg {
-    fill: rgba(88, 101, 242, 1) !important;
-  }
-  .button-holder {
-    color: rgba(88, 101, 242, 1)!important;
-    outline: rgba(88, 101, 242, 1) 2px solid!important;;
-    outline-offset: 2px!important;
-  }
-  .light-holder .light {
-    background: rgb(255, 255, 255)!important;;
-    background: linear-gradient(
-      180deg,
-      rgba(88, 101, 242, 1) 0%,
-      rgba(255, 255, 255, 0) 75%,
-      rgba(255, 255, 255, 0) 100%
-    )!important;
-  }
-}
-
-.light-button button.bt:hover .button-holder {
-  color: rgba(88, 101, 242, 1);
-  outline: rgba(88, 101, 242, 1) 2px solid;
-  outline-offset: 2px;
-}
-
-.light-button button.bt:hover .light-holder .light {
-  background: rgb(255, 255, 255);
-  background: linear-gradient(
-    180deg,
-    rgba(88, 101, 242, 1) 0%,
-    rgba(255, 255, 255, 0) 75%,
-    rgba(255, 255, 255, 0) 100%
-  );
-}
-
-/* -------------------  */
-
-.text {
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  font-size: 50px;
-  -webkit-text-stroke: 1px #eee;
-  color: transparent;
-  letter-spacing: 5px;
-  position: relative;
-}
-
-.light-button button.bt .light-holder .light {
-  position: absolute;
-  top: 0;
-  width: 200px;
-  height: 200px;
-  clip-path: polygon(50% 0%, 25% 100%, 75% 100%);
-  background: transparent;
-  animation: flicker 2s infinite;
-}
-
-@keyframes flicker {
-  0%, 19.9%, 22%, 24%, 26%, 27%, 29%, 30%, 60%, 62%, 64%, 66%, 67%, 69%, 70%, 100% {
-    opacity: 1;
-  }
-  20%, 23%, 25%, 28%, 61%, 63%, 65%, 68% {
-    opacity: 0.3;
-  }
 }
